# QuickDesk

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
.github/workflows/: quickdesk-macos.yml  quickdesk-windows.yml
QuickDesk/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
QuickDesk/qml/: Example.qml
QuickDesk/qml/component/: COMPONENTS.md  QDAvatar.qml  QDChip.qml  QDMenu.qml  QDMenuItem.qml  QDMenuSeparator.qml  QDMessageBox.qml  QDRadioButton.qml  QDSpinner.qml  QDStatusBar.qml  RemoteDesktopView.qml  qmldir
QuickDesk/qml/pages/: DeviceListPage.qml  RemoteControlPage.qml  SettingsPage.qml
QuickDesk/qml/quickdeskcomponent/: ConnectionListPanel.qml  FloatingToolButton.qml  LoginDialog.qml  RemoteDesktopView.qml  RemoteDeviceSelector.qml  RemoteTab.qml  RemoteTabBar.qml  TrustConfirmationDialog.qml  VideoStatsOverlay.qml
QuickDesk/qml/views/: Example.qml  Main.qml  MainWindow.qml  RemoteWindow.qml
QuickDesk/res/: QuickDesk.icns
QuickDesk/res/i18n/: en_US.ts  zh_CN.ts
QuickDesk/src/api/: AgentHandler.cpp  AgentHandler.h  ApiHandler.cpp  ApiHandler.h  OcrEngine.cpp  OcrEngine.h  SecurityManager.cpp  SecurityManager.h  TrustHandler.cpp  TrustHandler.h  UiStateService.cpp  UiStateService.h  VerificationService.cpp  VerificationService.h  WebSocketServer.cpp  WebSocketServer.h
QuickDesk/src/component/: CursorImageProvider.cpp  CursorImageProvider.h  KeycodeMapper.cpp  KeycodeMapper.h  SystemTrayManager.cpp  SystemTrayManager.h  VideoFrameProvider.cpp  VideoFrameProvider.h
QuickDesk/src/controller/: MainController.cpp  MainController.h
QuickDesk/src/core/: localconfigcenter.cpp  localconfigcenter.h
QuickDesk/src/manager/: AgentManager.cpp  AgentManager.h  AuthManager.cpp  AuthManager.h  ClientManager.cpp  ClientManager.h  HostManager.cpp  HostManager.h  PresetManager.cpp  ProcessManager.cpp  ProcessManager.h  SharedMemoryManager.cpp  SharedMemoryManager.h  TurnServerManager.cpp  TurnServerManager.h
QuickDesk/src/viewmodel/: configviewmodel.cpp  configviewmodel.h  connectionlistmodel.cpp  connectionlistmodel.h
SignalingServer/: .env  go.mod  go.sum
SignalingServer/cmd/signaling/: main.go
SignalingServer/internal/config/: config.go
SignalingServer/internal/handler/: api_handler.go  sms_handler.go  user_device_handler.go  user_handler.go  ws_handler.go
SignalingServer/internal/middleware/: apikey.go  auth.go
SignalingServer/internal/service/: sms_service.go
SignalingServer/web/: package.json
SignalingServer/web/src/: App.vue  main.js
SignalingServer/web/src/WebClient/js/: remote-main.js
SignalingServer/web/src/api/: admin.js  admin_device.js  settings.js  stats.js  users.js
SignalingServer/web/src/router/: index.js
SignalingServer/web/src/stores/: settings.js
SignalingServer/web/src/views/: AdminUserPage.vue  DeviceListPage.vue  HomePage.vue  LinkEditor.vue  LoginPage.vue  PresetPage.vue  SettingsPage.vue  UsersPage.vue
WebClient/: index.html
WebClient/js/: i18n.js  main.js
WebClient/js/api/: user-api.js
WebClient/src/views/: RemotePage.vue
cmake/: quickdesk-remoting.cmake
docs/: MCP接入指南.md  demo-scenarios.md  mcp-integration.md  signaling-server-deployment.md  信令服务器部署.md  典型场景Demo.md
examples/mcp-configs/: readonly-access.json  with-security.json
quickdesk-agent/: Cargo.toml
quickdesk-agent/agent/: Cargo.toml
quickdesk-agent/agent/src/: capability_reporter.rs  dep_checker.rs  main.rs  mcp_client.rs  skill_registry.rs
quickdesk-agent/mcp-server-common/: Cargo.toml
quickdesk-agent/mcp-server-common/src/: lib.rs
quickdesk-agent/skills/file-ops/: Cargo.toml  SKILL.md
quickdesk-agent/skills/file-ops/src/: main.rs
quickdesk-agent/skills/shell-runner/: Cargo.toml  SKILL.md
quickdesk-agent/skills/shell-runner/src/: main.rs
quickdesk-agent/skills/sys-info/: Cargo.toml  SKILL.md
quickdesk-agent/skills/sys-info/src/: main.rs
quickdesk-agent/src/: capability_reporter.rs  main.rs  mcp_client.rs  skill_registry.rs
quickdesk-mcp/: Cargo.toml
quickdesk-mcp/src/: event_bus.rs  http_transport.rs  main.rs  server.rs  trust.rs  workflow.rs  ws_client.rs
scripts/: build_agent_mac.sh  build_agent_win.bat  build_qd_mac.sh  build_qd_win.bat  lrelease.bat  publish_qd_mac.sh  publish_qd_win.bat
scripts/installer/: quickdesk.iss
server/: .env
test/mcp/: index.html
test/websocket/: index.html
