[package]
name = "shell-runner"
version.workspace = true
edition.workspace = true
description = "MCP server skill — shell command execution for remote host"

[[bin]]
name = "shell-runner"
path = "src/main.rs"

[dependencies]
mcp-server-common = { path = "../../mcp-server-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
