[package]
name = "sys-info"
version.workspace = true
edition.workspace = true
description = "MCP server skill — system information for remote host"

[[bin]]
name = "sys-info"
path = "src/main.rs"

[dependencies]
mcp-server-common = { path = "../../mcp-server-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sysinfo = "0.32"
